# rusty-engine

./: .gitignore  AGENTS.md  Cargo.toml  README.md  asha-object-centric-successor-spike.md  migration-cluster-ledger.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: verify.yml
content/assets/: kenney-wall-a.voxel.json
content/conversion/: kenney-wall-a.request.json
content/projects/: converted-wall.project.json  loading-bay.project.json
docs/: donor-provenance.md  experiment-results.md  rust-style.md  voxel-asset-format.md
rust/crates/engine-spatial/: Cargo.toml
rust/crates/engine-spatial/src/: lib.rs  voxel_edit.rs
rust/crates/engine-spatial/tests/: spatial.rs
rust/crates/entity-state/: Cargo.toml
rust/crates/entity-state/src/: command.rs  lib.rs  model.rs  snapshot.rs
rust/crates/entity-state/tests/: entity_state.rs
rust/crates/game-bridge-napi/: Cargo.toml
rust/crates/game-bridge-napi/src/: lib.rs
rust/crates/game-host/: Cargo.toml
rust/crates/game-host/src/: combat.rs  content.rs  definition.rs  door.rs  encounter.rs  interaction.rs  lib.rs  model.rs  navigation.rs  player.rs  project_admission.rs  project_codec.rs  project_store.rs  runtime.rs  runtime_records.rs  scheduler.rs  services.rs  session.rs  snapshot.rs  stored_project.rs
rust/crates/game-host/tests/: combat_runtime.rs  converted_voxel_asset.rs  door_runtime.rs  encounter_runtime.rs  generated_environment_runtime.rs  motion_runtime.rs  navigation_runtime.rs  player_controller_runtime.rs  project_codec.rs  project_session_separation.rs  project_store.rs  stored_project.rs  voxel_edit_persistence.rs
rust/crates/project-code-host/: Cargo.toml
rust/crates/project-code-host/src/: lib.rs  runtime.rs  snapshot.rs  types.rs
rust/crates/project-code-host/tests/: project_host.rs
rust/crates/voxel-asset/: Cargo.toml
rust/crates/voxel-asset/src/: asset.rs  codec.rs  conversion.rs  lib.rs
rust/crates/voxel-asset/tests/: voxel_asset.rs
rust/crates/voxel-convert/: Cargo.toml
rust/crates/voxel-convert/src/: convert.rs  diagnostic.rs  import.rs  lib.rs  store.rs
rust/crates/voxel-convert/tests/: conversion.rs
rust/crates/world-kernel/: Cargo.toml
rust/crates/world-kernel/src/: command.rs  lib.rs  model.rs  snapshot.rs
rust/crates/world-kernel/tests/: kernel.rs
scripts/: browser-smoke.mjs  build-native.sh  verify.sh
ts/: tsconfig.json
