[workspace]
resolver = "2"
members = [
    "rust/crates/engine-spatial",
    "rust/crates/game-host",
    "rust/crates/entity-state",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
core-assets = { path = "../asha-engine/engine-rs/crates/foundation/core-assets" }
core-ids = { path = "../asha-engine/engine-rs/crates/foundation/core-ids" }
core-math = { path = "../asha-engine/engine-rs/crates/foundation/core-math" }
core-space = { path = "../asha-engine/engine-rs/crates/foundation/core-space" }
core-time = { path = "../asha-engine/engine-rs/crates/foundation/core-time" }
core-voxel = { path = "../asha-engine/engine-rs/crates/state/core-voxel" }
svc-collision = { path = "../asha-engine/engine-rs/crates/services/svc-collision" }
svc-pathfinding = { path = "../asha-engine/engine-rs/crates/services/svc-pathfinding" }
svc-rng = { path = "../asha-engine/engine-rs/crates/services/svc-rng" }
svc-mesh = { path = "../asha-engine/engine-rs/crates/services/svc-mesh" }
svc-spatial = { path = "../asha-engine/engine-rs/crates/services/svc-spatial" }
svc-volume = { path = "../asha-engine/engine-rs/crates/services/svc-volume" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0.1"

[workspace.lints.rust]
unsafe_code = "forbid"
