[package]
name = "engine-spatial"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
core-ids.workspace = true
core-math.workspace = true
core-space.workspace = true
core-voxel.workspace = true
svc-collision.workspace = true
svc-pathfinding.workspace = true
svc-spatial.workspace = true
svc-volume.workspace = true
entity-state = { path = "../entity-state" }
