[package]
name = "game-bridge-napi"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
core-ids.workspace = true
napi.workspace = true
napi-derive.workspace = true
project-code-host = { path = "../project-code-host" }
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
napi-build = "2"
