[package]
name = "game-host"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
core-ids.workspace = true
core-math.workspace = true
core-time.workspace = true
engine-spatial = { path = "../engine-spatial" }
serde.workspace = true
serde_json.workspace = true
entity-state = { path = "../entity-state" }
